# python_plot_wrapper

./: .gitignore  README.md  pyproject.toml
examples/: matplotlib_example.py  matplotlib_interactive_example.py  matplotlib_subplots.py
src/plot_wrapper/: __init__.py  _brine_PIL_patch.py  _brine_array_patch.py  _brine_o3d_patch.py  _brine_patch.py  _brine_torch_patch.py  _matplotlib.py  _o3d.py  _plot_wrapper.py
